[package]
name = "tg-flows"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.2"
bytes = "1.0.0"
chrono = { version = "0.4.24", default-features = false }
derive_more = "0.99.17"
either = "1.8.1"
futures = "0.3.27"
mime = "0.3.16"
once_cell = "1.17.1"
rc-box = "1.2.0"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
serde_with_macros = "2.3.1"
takecell = "0.1.1"
tokio = { version = "1.12.0" }
tokio-util = { version = "0.7.0", features = ["codec"] }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
cool_asserts = "2.0.3"
