[package]
name = "tg-flows"
version = "0.3.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Telegram integration for flows.network"
documentation = "https://docs.rs/tg-flows"

[package.metadata.docs.rs]
default-target = "wasm32-wasi"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.70"
bitflags = "1.2"
bytes = "1.0.0"
chrono = { version = "0.4.24", default-features = false }
derive_more = "0.99.17"
either = "1.8.1"
enum-map = "2.5.0"
flowsnet-platform-sdk = "0.1.2"
futures = "0.3.27"
http_req_wasi = "0.10.2"
lazy_static = "1"
mime = "0.3.16"
once_cell = "1.17.1"
rc-box = "1.2.0"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
serde_with_macros = "2.3.1"
strum = { version = "0.24.1", features = ["derive"] }
takecell = "0.1.1"
tokio = { version = "1.12.0" }
tokio-util = { version = "0.7.0", features = ["codec"] }
url = { version = "2.3.1", features = ["serde"] }
urlencoding = "2.1.2"
uuid = { version = "1.3.0", features = ["v4"] }
tg-flows-macros = { version = "0.1", path = "../macros" }

[dev-dependencies]
cool_asserts = "2.0.3"

[[example]]
name = "get_me"

[[example]]
name = "get_chat_member"

[[example]]
name = "send_message"

[[example]]
name = "send_photo"
